# FinderPlus

./: .gitignore  CMakeLists.txt  README.md  darktheme.qss  fileExplorer  fileExplorer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
